<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Twitter Client</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_photos">Flickr Photos</string>
    <string name="login_label">Connect to Twitter</string>
    <string name="title_activity_timeline">Timeline</string>
    <string name="title_activity_tweet_details">TweetDetails</string>
    <string name="title_activity_post_tweet">PostTweet</string>
    <string name="tweet_text">TWEET</string>
    <string name="cancel_text">CANCEL</string>
    <string name="whatshappening">What\'s happening?</string>
    <string name="text_username">Username</string>
    <string name="text_screenname">Screenname</string>
    <string name="text_timestamp">Timestamp</string>
    <string name="text_body">body</string>
    

</resources>