<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    tools:context="${relativePackage}.${activityClass}" >

    <RelativeLayout
        android:id="@+id/rl_username_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/ivProfileCompose"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/tvUserNameCompose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/ivProfileCompose"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/ivProfileCompose"
            android:text="First Last"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTweetCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/tvUserNameCompose"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/tvUserNameCompose"
            android:gravity="right"
            android:text="140"
            android:textColor="#9900AB17"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvScreenNameCompose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/tvUserNameCompose"
            android:layout_below="@id/tvUserNameCompose"
            android:layout_marginRight="10dp"
            android:text="@string/text_username"
            android:textColor="#666666"
            android:textSize="11sp" />
    </RelativeLayout>

    <EditText
        android:id="@+id/etTweetMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_username_details"
        android:layout_margin="15dp"
        android:hint="@string/whatshappening"
        android:maxLength="140"
        android:textColor="#666666"
        android:textColorHint="#666666"
        android:textCursorDrawable="@null"
        android:textSize="14sp" />

    <ProgressBar
        android:id="@+id/pbCompose"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tvDialogTweet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etTweetMessage"
        android:layout_marginLeft="14dp"
        android:layout_toRightOf="@+id/pbCompose"
        android:layout_marginBottom="20dp"
        android:paddingLeft="20dp"
        android:text="@string/tweet_text"
        android:textColor="#DC297ABA"
        android:textSize="13sp" />
    
    <TextView
        android:id="@+id/tvDialogCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvDialogTweet"
        android:layout_alignBottom="@+id/tvDialogTweet"
        android:layout_marginLeft="51dp"
        android:layout_toRightOf="@+id/tvDialogTweet"
        android:paddingRight="20dp"
        android:text="@string/cancel_text"
        android:layout_marginBottom="20dp"
        android:textColor="#DC297ABA"
        android:textSize="13sp" />
    
</RelativeLayout>