<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >
	    <RelativeLayout
        android:id="@+id/rl_tweet_container"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white" >

        <TextView
            android:id="@+id/tvTweet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:text="@string/tweet_text"
            android:textColor="#DC297ABA"
            android:textSize="13sp" />

        <View
            android:id="@+id/vSeparator3"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_toLeftOf="@id/tvTweet"
            android:background="#78297ABA" />

        <TextView
            android:id="@+id/tvReplyTweetCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="3dp"
            android:layout_toLeftOf="@id/vSeparator3"
            android:text=""
            android:textColor="#9900AB17"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/etTweetBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toLeftOf="@id/tvReplyTweetCount"
            android:background="@drawable/card_background_white"
            android:hint="@string/whatshappening"
            android:maxLength="140"
            android:textColor="#000000"
            android:textColorHint="#666666" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        android:layout_above="@id/rl_tweet_container">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RelativeLayout
                android:id="@+id/rlUsernameDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp" >

                <ImageView
                    android:id="@+id/ivProfileCompose"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/ic_launcher" />

                <TextView
                    android:id="@+id/tvUserNameCompose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/ivProfileCompose"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@id/ivProfileCompose"
                    android:text="First Last"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvScreenNameCompose"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/tvUserNameCompose"
                    android:layout_below="@id/tvUserNameCompose"
                    android:layout_marginRight="10dp"
                    android:text="@string/text_username"
                    android:textColor="#666666"
                    android:textSize="11sp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tvTweetBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rlUsernameDetails"
                android:layout_margin="15dp"
                android:autoLink="web"
                android:hint="@string/whatshappening"
                android:textColor="#000000"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/ivDetailImage"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_below="@id/tvTweetBody"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:src="@drawable/ic_launcher"
                android:visibility="gone" />

            <View
                android:id="@+id/vSeparator1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/ivDetailImage"
                android:layout_margin="15dp"
                android:background="#78297ABA" />

            <RelativeLayout
                android:id="@+id/rlTweetDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/vSeparator1"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/ivFavouritesImage"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/ic_favorites" />

                <TextView
                    android:id="@+id/tvFavoritesCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_toRightOf="@id/ivFavouritesImage"
                    android:text=""
                    android:textColor="#78297ABA"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/ivRetweetsImage"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:layout_toRightOf="@id/tvFavoritesCount"
                    android:src="@drawable/ic_retweet" />

                <TextView
                    android:id="@+id/tvRetweetsCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_toRightOf="@id/ivRetweetsImage"
                    android:text=""
                    android:textColor="#78297ABA"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <View
                android:id="@+id/vSeparator2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/rlTweetDetails"
                android:layout_margin="15dp"
                android:background="#78297ABA" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
